force-app/main/default/objects/Shared_Review_Participant__c/Shared_Review_Participant__c.object-meta.xml
<CustomObject>
    <description>Participant in a shared review session.</description>
    <label>Shared Review Participant</label>
    <pluralLabel>Shared Review Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>