force-app/main/default/objects/Shared_Review_Participant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role within session.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Author</fullName>
                <default>true</default>
                <label>Author</label>
            </value>
            <value>
                <fullName>Reviewer</fullName>
            </value>
            <value>
                <fullName>Observer</FullName>
                <label>Observer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>