force-app/main/default/objects/Shared_Review_Participant__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <description>Connected session.</description>
    <label>Session</label>
    <referenceTo>Shared_Review_Session__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>