force-app/main/default/objects/Shared_Review_Participant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Participant user.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Shared Review Participants</relationshipLabel>
    <relationshipName>Shared_Review_Participants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>